# AgentProject-1

./: .env.example  .pre-commit-config.yaml  ARCHITECTURE_INTEGRATION.md  ARCHITECTURE_REFACTOR.md  LICENSE  README.md  pyproject.toml
examples/: chitchat_followup_example.py  travel_planner_human_loop_example.py
src/examples/: chitchat_followup_example.py  escalation_example.py  test_skill_registry.py  thy_followup_example.py  travel_planner_human_loop_example.py  travel_planner_info_skill_example.py
src/travel_planner/: main.py  thy_mcp_example.py
src/travel_planner/examples/: thy_mcp_example.py
src/travel_planner/graphs/: travel_planner_graph.py
src/travel_planner/helpers/: area_code.csv  area_code.json  draw_graph.py  general_utils.py  llm_utils.py  logs.py
src/travel_planner/mcp_server/: __init__.py  hotel_server.py  mock_thy_server.py  weather_server.py
src/travel_planner/models/: available_llm_models.py  available_openai_models.py  router_models.py  state.py
src/travel_planner/nodes/: base_node.py  chitchat_node.py  collect_trip_params_node.py  escalation_node.py  extract_trip_params_node.py  fix_trip_params_node.py  hotel_params_llm_node.py  hotel_search_node.py  llm_trip_planner_node.py  node_factory.py  router_node.py  tool_node.py  trip_params_human_input_node.py  turkish_airlines_node.py
src/travel_planner/orchestration/: __init__.py  orchestrator.py  strategy.py
src/travel_planner/prompts/: prompt_handler.py
src/travel_planner/prompts/yaml/: amadeus_hotel_search_params.yaml  chitchat_response.yaml  fix_trip_params_extraction.yaml  routing_decision.yaml  trip_params_extraction.yaml  trip_planner.yaml  turkish_airlines_response.yaml
src/travel_planner/settings/: settings_handler.py
src/travel_planner/settings/yaml/: amadeus_settings.yaml  openai_settings.yaml
src/travel_planner/skills/: __init__.py  base_skill.py  booking_skill.py  conversation_skill.py  info_skill.py  planning_skill.py  skill_registry.py
src/travel_planner/skills/weather/: SKILL.md  __init__.py  impl.py  schema.py
src/travel_planner/skills/weather/tests/: example_usage.py  test_weather.py
src/travel_planner/tools/: __init__.py  api_gateway.py  base_tool.py  mcp_client.py  skill_tool.py
src/travel_planner/ui/: .gitignore
src/travel_planner/ui/chat/: chat.py  state.py  ui_state.py
src/travel_planner/ui/chat/components/: chat.py  navbar.py
