[project]
name = "langgraph-template-travel-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dill>=0.4.0",
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "langchain>=0.3.25",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.19",
    "langgraph>=0.6.7",
    "pydantic>=2.11.5",
    "python-dateutil>=2.9.0.post0",
    "reflex>=0.8.10",
    "types-pyyaml>=6.0.12.20250516",
    "langfuse>=2.60.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["travel_planner"]
package-dir = {"" = "src"}
