[project]
name = "langgraph-template-travel-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dill>=0.4.0",
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "langchain>=0.3.25",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.19",
    "langgraph>=0.6.7",
    "pydantic>=2.11.5",
    "python-dateutil>=2.9.0.post0",
    "reflex>=0.8.10",
    "types-pyyaml>=6.0.12.20250516",
    "langfuse>=2.60.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "isort>=5.13.2",
    "pre-commit>=4.0.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["travel_planner"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
ignore = ["UP046", "UP047"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
known_first_party = ["travel_planner"]
src_paths = ["src"]

[tool.mypy]
python_version = "3.13"
mypy_path = ["src"]
namespace_packages = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
exclude = [
    "^src/travel_planner/ui/",
]
disable_error_code = [
    "import-untyped",
]
